# tibia_books_nlp

./: README.md  pyproject.toml  scrapper.py
